# -cost_care_ai_test

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml  tradeoffs.md
agent/: callbacks.py  graph.py  nodes.py  state.py  state_manager.py
config/: settings.py
data/knowledge_base/: costcare_ai.md
prompts/: booking_prompt.md  rag_prompt.md  system_prompt.md
tests/: __init__.py  conftest.py
tests/development/: test_agent_graph.py  test_booking_servive.py  test_rag_service.py
tests/unittests/: test_calendar_service.py  unittests.md
tools/: calendar_service.py  models.py  rag_service.py
